Fix thanks page text alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -492,6 +492,8 @@ textarea.input {
 
 
 /*STYLE THANKS PAGE*/
+
+/*
 .thanks text {
     display: flex;
     flex-wrap: wrap;
@@ -499,7 +501,16 @@ textarea.input {
     margin-left: auto;
     margin-right: auto;
     max-width: 100%;
+}*/
+
+.thanks text {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
 }
+
 
 .thanks-800 img  {
     display: flex;
@@ -609,6 +620,10 @@ Desktop fonts should be between 16 - 20px
     height: auto;
     flex-direction: row;
     box-shadow: 0 10px 15px 0 rgb(43, 46, 34); 
+    }
+
+    .thanks-800 img  {
+        display: none;
     }
 }  
 
